--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-select": "^5.7.3",
     "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
