--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
