--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
     "react-scroll-to-bottom": "^4.2.0",
     "react-select": "^5.7.3",
     "socket.io-client": "^4.6.2"
